# petrivet

./: .gitignore  Cargo.toml  PLAN.md  journal.md  requirements_spec.md
.github/workflows/: deploy-pages.yml
examples/: analysis_demo.rs  dining_philosophers.rs  dipn_io.rs  dipn_physics.rs  dipn_water_treatment.rs  mutex.rs  ordinary_net.rs  playground.rs  target_marking.rs  test2.rs  test3.rs  workflow_analysis.rs
petrivet-viz/: ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
petrivet-viz/src/: main.ts  style.css  vendor.d.ts
petrivet-wasm/: Cargo.toml  package.json
petrivet-wasm/src/: lib.rs  types.rs
petrivet/examples/: dining_philosophers.rs  mutex.rs  workflow_analysis.rs
petrivet/src/: labeled.rs  lib.rs  marking.rs  system.rs
petrivet/src/analysis/: math.rs  mod.rs  model.rs  semi_decision.rs  structural.rs
petrivet/src/net/: builder.rs  class.rs  keys.rs  mod.rs  node_map.rs  sorted_set.rs
petrivet/src/pnml/: convert.rs  mod.rs
petrivet/tests/: pnml_integration.rs
src/: behavior.rs  coverability.rs  explorer.rs  lib.rs  literature.rs  marking.rs  reachability.rs  state_space.rs  structure.rs  system.rs
src/analysis/: boundedness.rs  liveness.rs  math.rs  mod.rs  model.rs  reachability.rs  semi_decision.rs  structural.rs
src/behavior/: marking.rs  mod.rs
src/dipn/: mod.rs
src/net/: builder.rs  class.rs  mod.rs  sorted_set.rs
src/pnml/: convert.rs  mod.rs
src/state_space/: coverability.rs  explorer.rs  mod.rs  reachability.rs
src/structure/: class.rs  invariants.rs  mod.rs
(+7 files in other folders)
