[package]
name = "petrivet"
version = "0.1.0"
edition = "2024"

[dependencies]
good_lp = { version = "1.15.0", default-features = false, features = ["microlp"] }
petgraph = "0.8.2"
quick-xml = { version = "0.39.2", features = ["serialize"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
pnml = ["serde", "quick-xml"]
