[package]
name = "petrivet-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
petrivet = { path = "../petrivet" }
wasm-bindgen = "0.2.114"
tsify = { version = "0.5.6", features = ["js"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"